--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ p {
     text-align: center;
   }
 
-  .project-link {
+  .launchButton {
     display: block;
     text-align: center;
     margin: 0 20px;
